--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
+    "node-fetch": "^2.7.0",
     "validator": "^13.15.15",
     "winston": "^3.17.0"
   },
