WiliAi: implement AI-powered recommendation feature
- Integrated AI API (currently Gemini) to analyze user liked items and suggest if they would like a candidate item.
- Architecture allows swapping AI providers in the future.
- Preprocess items to extract only relevant fields (title, mediaType).

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Denner25/se_project_wili_backend#readme",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "bcryptjs": "^3.0.2",
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
